- Having ElvUI installed will no longer uncheck conficting option checkboxes.  Conflicting option checkboxes will still be locked but they won't be unchecked.  So if a conflicting option checkbox was checked before installing ElvUI or before enabling a conflicting ElvUI module, it will still be checked after disabling ElvUI or disabling the conflicting ElvUI module.
- The 'Manage frames' option ('Frames') has been removed.  Use Edit Mode to move and scale the player and target frames.
- The 'Manage buffs' option ('Frames') has been removed.  Use Edit Mode to move and scale the buff and debuff frames.
- The 'Manage power bar' option ('Frames') has been removed.  Use Edit Mode to move the encounter bar.
- The 'Manage focus' option ('Frames') has been removed.  Use Edit Mode to move the focus frame.
- The 'Hide gryphons' option ('Frames') has been removed.  Use Edit Mode to hide the gryphons.
- The 'Hide hide bags and micro' option ('Frames') has been removed.  You can hide bags with the arrow button next to the backpack icon.
- The 'Set field of view' option ('System') has been removed.  You can set the field of view in the game settings panel.
- The 'Save profession filters' option ('System') has been removed.  The game saves profession filters now.

9.2.45 - 19th October 2022
- Dragonflight: For 'Enhance tooltip' ('Interface'), all of the tooltip settings work again except show target (this will be fixed later).
- Dragonflight: Updated 'Sell junk automatically' ('Automation') for 10.0.2.46144.

9.2.44 - 17th October 2022
- Dragonflight: For 'Enhance tooltip' ('Interface'), tooltip color coding, guild ranks, colored backdrops and target will not currently be applied due to issues with the game code.
- Dragonflight: Leatrix Plus entries in the game keybindings menu do not currently have labels due to issues with the game code.  The keybindings themselves will work though.